syntax = "proto3";

package overlock.storage;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "overlock/storage/params.proto";
import "overlock/storage/registry.proto";

option go_package = "overlock/x/storage/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/overlock/storage/params";
  }

  // Queries a list of ShowRegistry items.
  rpc ShowRegistry(QueryShowRegistryRequest) returns (QueryShowRegistryResponse) {
    option (google.api.http).get = "/overlock/storage/show_registry/{id}";
  }

  // Queries a list of ListRegistry items.
  rpc ListRegistry(QueryListRegistryRequest) returns (QueryListRegistryResponse) {
    option (google.api.http).get = "/overlock/storage/list_registry";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QueryShowRegistryRequest {
  uint64 id = 1;
}

message QueryShowRegistryResponse {
  Registry registry = 1 [(gogoproto.nullable) = false];
}

message QueryListRegistryRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListRegistryResponse {
  repeated Registry registry = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
